# SHIFT-RAG

./: .gitignore  main.py  prompts.json  pyproject.toml
app/: config.py  routes.py
app/services/: LLM.py  MetricEvaluator.py  QAService.py  Reader.py  Retriever.py
data/documents/: about_company.md
data/documents/dms/: dms_info.md
data/documents/events/: database_meetup.md  java_talks.md  mobi_fest.md  mobifest_meetup.md  system_talks.md  test_trend.md  tomsk_data_science_meetup.md
data/documents/jobs/: analytics.md  big_data.md  data_science.md  development_c_sharp.md  development_java.md  testing.md
data/documents/salary/: benefits.md  income_certificate.md  salary.md  salary_cards.md  tax_deductions.md
data/documents/start/: intensive.md  internships.md  lab.md
data/documents/start/school/: analytics.md  android.md  autotest.md  cftbankanalitica.md  cftbankdev.md  commerce.md  computervision.md  infosecurity.md  ios.md  java.md  ml.md  ml_python.md  qa-python.md  supportbs.md  technicalsupport.md  testing.md  trueadmin.md
data/documents/vacation/: vacation_faqs.md  vacation_info.md
