[tool.poetry]
name = "rag"
version = "0.1.0"
description = ""
authors = ["Alex Shruts <al.shruts@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
langchain-community = "^0.2.11"
langchain-huggingface = "^0.0.3"
pydantic-settings = "^2.4.0"
uvicorn = "^0.30.5"
faiss-cpu = "^1.8.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
